--- a/ninja-desaparecido.html
+++ b/ninja-desaparecido.html
@@ -32,6 +32,15 @@
       $('#restore').on('click', function(){
         $('img').slideDown();
       });
+
+      $('img').hover(
+        function(){
+          $(this).attr('src', 'https://i.pinimg.com/474x/16/f1/de/16f1deafed31adeba75d4dd3bd00b25d.jpg' )
+        },
+        function() {
+          $(this).attr('src', 'https://marketingloserastu.files.wordpress.com/2015/08/unchi-e1439970464820.png')
+        }
+      )
     </script>
   </div>
 </body>
